--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
     <div class="button-container">
-        <a href="https://www.example.com/red" class="button red">Red</a>
+        <a href="https://forms.gle/S5vn1nEo62GMuFHW6" class="button red">1</a>
         <a href="https://www.example.com/blue" class="button blue">Blue</a>
         <a href="https://www.example.com/yellow" class="button yellow">Yellow</a>
         <a href="https://www.example.com/green" class="button green">Green</a>
