--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 <body>
     <div class="button-container">
         <a href="https://forms.gle/S5vn1nEo62GMuFHW6" class="button red">1</a>
-        <a href="https://www.example.com/blue" class="button blue">2</a>
-        <a href="https://www.example.com/yellow" class="button yellow">3</a>
-        <a href="https://www.example.com/green" class="button green">4</a>
+        <a href="https://forms.gle/H8SGoiQRL4eGn8zy8" class="button blue">2</a>
+        <a href="https://forms.gle/FS8XKNzN3b1rQuo59" class="button yellow">3</a>
+        <a href="https://forms.gle/jP8MZF8eWgnFZSjq5" class="button green">4</a>
     </div>
 
     <div class="overlay" id="overlay"></div>
